--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         flex-flow: column;
         align-items: center ">
         <div>
-          Made with ❤ by <a href="tencent://Message/?Uin=3170953705&websiteName=qzone.qq.com&Menu=yes"
-            onclick="jump(event, 'tencent://Message/?Uin=3170953705&websiteName=qzone.qq.com&Menu=yes')">qudhnd</a>
+          Made with ❤ by <a href="https://gal.ack20.eu.org/contact.html"
+            onclick="jump(event, 'https://gal.ack20.eu.org/contact.html')">qudhnd</a>
         </div>
       </div>
     </div>
